--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -11,3 +11,29 @@ body {
 .ciao .rossa {
 	color: blue;
 }
+
+a {
+	position: relative;
+	height: 50px;
+	width: 50px;
+	line-height: 50px;
+	text-align: center;
+	display: inline-block;
+	z-index: 1;
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: red;
+		transform: scale(0);
+		border-radius: 100%;
+		z-index: -1;
+		transition: transform 15s linear;
+	}
+	&.clicked:before {
+		transform: scale(100);
+	}
+}
