--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,24 @@ header {
   background: #00BCD4;
   color: #fff;
   overflow: hidden; }
+  header .animate-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(255, 0, 0, 0.3);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 100%;
+    transition: -webkit-transform 10s linear;
+    transition: transform 10s linear; }
+  header.clicked .animate-bg {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
 
 nav li {
   display: inline-block; }
