--- a/app/css/main.css
+++ b/app/css/main.css
@@ -19,23 +19,50 @@ header {
   color: #fff;
   overflow: hidden; }
   header .animate-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(255, 0, 0, 0.3);
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
+    position: fixed;
+    background: red;
     width: 100%;
-    height: 100%;
-    position: absolute;
+    height: 0;
+    padding-bottom: 100%;
     border-radius: 100%;
-    transition: -webkit-transform 10s linear;
-    transition: transform 10s linear; }
-  header.clicked .animate-bg {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1); }
+    opacity: 0;
+    -webkit-transform-origin: 0 0;
+    -ms-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-animation-name: materialAnimation;
+    animation-name: materialAnimation;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+    transform: translate3d(-50%, -50%, 0); }
+
+@-webkit-keyframes materialAnimation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
+    transform: scale(0) translate3d(-50%, -50%, 0); }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(2) translate3d(-50%, -50%, 0);
+    transform: scale(2) translate3d(-50%, -50%, 0); } }
+
+@keyframes materialAnimation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
+    transform: scale(0) translate3d(-50%, -50%, 0); }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(2) translate3d(-50%, -50%, 0);
+    transform: scale(2) translate3d(-50%, -50%, 0); } }
 
 nav li {
   display: inline-block; }
