--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -15,19 +15,32 @@ header {
 	color: #fff;
 	overflow: hidden;
 	.animate-bg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		background: rgba(red, .3);
-		transform: scale(0);
+		position: fixed;
+		background: red;
 		width: 100%;
-		height: 100%;
-		position: absolute;
+		height: 0;
+		padding-bottom: 100%;
 		border-radius: 100%;
-		transition: transform 10s linear;
+		opacity: 0;
+		transform-origin: 0 0;
+		animation-name: materialAnimation;
+	    animation-duration: 1s;
+	    animation-timing-function: linear;
+	    // animation-delay: 1s;
+	    animation-iteration-count: infinite;
+	    animation-direction: alternate;
+		transform: translate3d(-50%, -50%, 0);
+		// transition: transform 1s linear, opacity 1s linear;
 	}
-	&.clicked .animate-bg {
-		transform: scale(1);
+}
+@keyframes materialAnimation {
+	0% {
+		opacity: 0;
+		transform: scale(0) translate3d(-50%, -50%, 0);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(2) translate3d(-50%, -50%, 0);
 	}
 }
 nav {
