--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -26,7 +26,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	height: 540px;
-	//background: #00BCD4;
+	background: #00BCD4;
 	color: #fff;
 	overflow: hidden;
 	transform: translateZ(0);
