--- a/css/main.css
+++ b/css/main.css
@@ -322,12 +322,22 @@ td, th {
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+  line-height: 1.3; }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
+h1, h2, h3, strong {
+  font-weight: 600; }
+
+a {
+  text-decoration: none;
+  color: #447294; }
+  a:hover {
+    text-decoration: underline; }
+
+.code {
+  font-family: monospace, monospace; }
 
 header {
   display: -webkit-flex;
@@ -371,49 +381,24 @@ header {
     -webkit-transform: translate3d(-50%, -50%, 0);
     transform: translate3d(-50%, -50%, 0);
     transition: background 0.5s linear; }
-
-@-webkit-keyframes materialAnimation {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
-    transform: scale(0) translate3d(-50%, -50%, 0); }
-
-  50% {
-    opacity: 0.3; }
-
-  100% {
-    opacity: 0;
-    -webkit-transform: scale(3) translate3d(-50%, -50%, 0);
-    transform: scale(3) translate3d(-50%, -50%, 0); } }
-
-@keyframes materialAnimation {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
-    transform: scale(0) translate3d(-50%, -50%, 0); }
-
-  50% {
-    opacity: 0.3; }
-
-  100% {
-    opacity: 0;
-    -webkit-transform: scale(3) translate3d(-50%, -50%, 0);
-    transform: scale(3) translate3d(-50%, -50%, 0); } }
-
-nav li {
-  display: inline-block; }
-nav a {
-  position: relative;
-  height: 50px;
-  width: 50px;
-  line-height: 50px;
-  text-align: center;
-  display: block;
-  color: #fff;
-  text-decoration: none;
-  z-index: 10;
-  -webkit-transform: translate3d(0, 0, 10px);
-  transform: translate3d(0, 0, 10px); }
+  header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  header li {
+    display: inline-block; }
+  header a {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    text-align: center;
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    z-index: 10;
+    -webkit-transform: translate3d(0, 0, 10px);
+    transform: translate3d(0, 0, 10px); }
 
 .content {
   margin-top: -70px;
@@ -447,6 +432,34 @@ nav a {
     animation-name: fly-out-to-right;
     -webkit-animation-delay: 0;
     animation-delay: 0; }
+
+@-webkit-keyframes materialAnimation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
+    transform: scale(0) translate3d(-50%, -50%, 0); }
+
+  50% {
+    opacity: 0.3; }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(3) translate3d(-50%, -50%, 0);
+    transform: scale(3) translate3d(-50%, -50%, 0); } }
+
+@keyframes materialAnimation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0) translate3d(-50%, -50%, 0);
+    transform: scale(0) translate3d(-50%, -50%, 0); }
+
+  50% {
+    opacity: 0.3; }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(3) translate3d(-50%, -50%, 0);
+    transform: scale(3) translate3d(-50%, -50%, 0); } }
 
 @-webkit-keyframes fly-in-from-left {
   from {
