--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -16,12 +16,31 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
+	line-height: 1.3;
 }
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+
+h1, 
+h2, 
+h3,
+strong {
+	font-weight: 600;
 }
+
+a {
+	text-decoration: none;
+	color: #447294;
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
+.code {
+	font-family: monospace, monospace;
+
+}
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -53,21 +72,11 @@ header {
 		transform: translate3d(-50%, -50%, 0);
 		transition: background 0.5s linear;
 	}
-}
-@keyframes materialAnimation {
-	0% {
-		opacity: 0;
-		transform: scale(0) translate3d(-50%, -50%, 0);
+	ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
 	}
-	50% {
-		opacity: 0.3;
-	}
-	100% {
-		opacity: 0;
-		transform: scale(3) translate3d(-50%, -50%, 0);
-	}
-}
-nav {
 	li {
 		display: inline-block;
 	}
@@ -84,6 +93,7 @@ nav {
 		transform: translate3d(0,0,10px);
 	}
 }
+
 .content {
 	margin-top: -70px;
 	background: #f5f5f5;
@@ -107,6 +117,21 @@ nav {
 		transform-origin: right top 0px;
 		animation-name: fly-out-to-right;
 		animation-delay: 0;
+	}
+}
+
+// animation
+@keyframes materialAnimation {
+	0% {
+		opacity: 0;
+		transform: scale(0) translate3d(-50%, -50%, 0);
+	}
+	50% {
+		opacity: 0.3;
+	}
+	100% {
+		opacity: 0;
+		transform: scale(3) translate3d(-50%, -50%, 0);
 	}
 }
 @keyframes fly-in-from-left {
